<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/toolbar"
        ></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rut_paciente"
        android:textSize="@dimen/nombreGrande"
        android:layout_marginTop="@dimen/margin_top_texto"
        ></TextView>
    <EditText
        android:id="@+id/rut_pac_txt_cr"
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></EditText>
    <TextView
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_paciente"
        android:textSize="@dimen/nombreGrande"
        android:layout_marginTop="@dimen/margin_top_texto"
        ></TextView>
    <EditText
        android:textColor="@color/primary_text"
        android:id="@+id/nombre_pac_txt_cr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></EditText>
    <TextView
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellido_paciente"
        android:layout_marginTop="@dimen/margin_top_texto"
        android:textSize="@dimen/nombreGrande"></TextView>
    <EditText
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/apellido_pac_txt_cr"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fechaBtn_cr"
            android:background="@color/divider"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="@dimen/margin_top_texto"
            android:layout_weight="1"
            android:text="@string/fecha"></Button>

        <TextView
            android:textColor="@color/primary_text"
            android:id="@+id/fecha_ex_cr"
            android:paddingLeft="50dp"
            android:textSize="@dimen/nombreGrande"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:layout_weight="1"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area_de_trabajo"
            android:textSize="@dimen/nombreGrande"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:layout_marginTop="@dimen/nombreGrande"></TextView>
        <Spinner
            android:textColor="@color/primary_text"
            android:id="@+id/area_spinn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"></Spinner>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/primary_text"
            android:layout_height="match_parent"
            android:text="@string/tiene_sintomas"
            android:textSize="@dimen/nombreGrande"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_top_texto"></TextView>

        <Switch
            android:textColor="@color/primary_text"
            android:id="@+id/sint_sw_cr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showText="true"
            android:textOff="No"
            android:textOn="Si"></Switch>
    </LinearLayout>
    <TextView
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/nombreGrande"
        android:text="@string/temperatura"
        android:layout_marginTop="@dimen/margin_top_texto"></TextView>
    <EditText
        android:textColor="@color/primary_text"
        android:id="@+id/temp_pac_cr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"></EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/primary_text"
            android:layout_height="match_parent"
            android:text="@string/tiene_tos"
            android:textSize="@dimen/nombreGrande"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_top_texto"></TextView>

        <Switch
            android:id="@+id/tos_sw_cr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center_vertical"
            android:showText="true"
            android:textOff="No"
            android:textOn="Si"></Switch>
    </LinearLayout>
    <TextView
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/nombreGrande"
        android:text="@string/presi_n_arterial"
        android:layout_marginTop="@dimen/margin_top_texto"></TextView>
    <EditText
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/presion_pac_txt_cr"
        android:inputType="number|none"></EditText>

    <Button
        android:textColor="@color/primary_text"
        android:background="@color/divider"
        android:id="@+id/agregar_paciente_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Agregar Paciente"></Button>
</LinearLayout>
    </ScrollView>
</LinearLayout>