<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/primary_light">


 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/margin_top_center"
     android:orientation="vertical">
     <TextView
         android:textColor="@color/primary_text"
         android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/nombre"
         android:gravity="center_horizontal"
         android:textSize="@dimen/etiqueta_app_size"


         ></TextView>

     <EditText
         android:id="@+id/nombreUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/textview_border"
         android:hint="Rut"
         android:textColor="@color/secondary_text"
         android:gravity="center_horizontal"
         android:textSize="@dimen/etiqueta_app_size"></EditText>
 </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_texto"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="@dimen/etiqueta_app_size"
            ></TextView>

        <EditText
            android:id="@+id/password"
            android:textColor="@color/secondary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="4 últimos dígitos"
            android:background="@drawable/textview_border"
            android:inputType="numberPassword"
            android:textSize="@dimen/etiqueta_app_size"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/iniciarBtn"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:layout_marginTop="@dimen/margin_top_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciarSesion"
        android:textSize="@dimen/etiqueta_btn"
        android:layout_gravity="center_horizontal"
        android:background="@color/icons"
        ></Button>



</LinearLayout>